# Compression-Simulation-Study

./: 128_128_128_d_random_cuda_andes.out  128_128_128_d_random_cuda_summit.out  128_128_128_d_random_hip_crusher.out  128_128_128_d_random_hip_spock.out  128_128_128_d_random_sycl_gen9.out  128_128_128_s_random_cuda_andes.out  128_128_128_s_random_cuda_summit.out  128_128_128_s_random_hip_crusher.out  128_128_128_s_random_hip_spock.out  128_128_128_s_random_sycl_gen9.out  256_256_256_d_random_cuda_andes.out  256_256_256_d_random_cuda_summit.out  256_256_256_d_random_hip_crusher.out  256_256_256_d_random_hip_spock.out  256_256_256_d_random_sycl_gen9.out  256_256_256_s_random_cuda_andes.out  256_256_256_s_random_cuda_summit.out  256_256_256_s_random_hip_crusher.out  256_256_256_s_random_hip_spock.out  256_256_256_s_random_sycl_gen9.out  32_32_32_d_random_cuda_andes.out  32_32_32_d_random_cuda_summit.out  32_32_32_d_random_hip_crusher.out  32_32_32_d_random_hip_spock.out  32_32_32_d_random_sycl_gen9.out  32_32_32_s_random_cuda_andes.out  32_32_32_s_random_cuda_summit.out  32_32_32_s_random_hip_crusher.out  32_32_32_s_random_hip_spock.out  32_32_32_s_random_sycl_gen9.out  512_512_512_d_random_cuda_andes.out  512_512_512_d_random_cuda_summit.out  512_512_512_d_random_hip_crusher.out  512_512_512_d_random_hip_spock.out  512_512_512_d_random_sycl_gen9.out  512_512_512_s_random_cuda_andes.out  512_512_512_s_random_cuda_summit.out  512_512_512_s_random_hip_crusher.out  512_512_512_s_random_hip_spock.out  512_512_512_s_random_sycl_gen9.out  (+17 more)
results/: crusher_xgc_1e14_1e17_inf_1.csv  (+18 more)
